--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/bug.png
+     - assets/olaf-emoji.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
